# NuGenRDKit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  example_molecules.smi  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
routes/: __init__.py  coordinates.py  descriptors.py  fingerprints.py  molecular_structure.py  openapi.py  properties.py  reactions.py  similarity.py  status.py  visualization.py
static/css/: app.css  style.css  tokens.css
static/js/: app.js  base_init.js  coordinates.js  descriptors.js  fingerprints.js  formatters.js  index.js  library_picker.js  molecule_library.js  pagination.js  properties.js  reactions.js  recent.js  results_card.js  similarity.js  structure.js  structure_picker.js  swagger_init.js  test-suite.js  topbar_search.js  utils.js  visualization.js  workspace.js  workspace_save.js
templates/: base.html  coordinates.html  descriptors.html  fingerprints.html  index.html  properties.html  reactions.html  similarity.html  structure.html  visualization.html
templates/_partials/: _input_panel.html  _modal.html  _results_panel.html  _sidebar.html  _tool_page.html  _topbar.html
tests/: conftest.py  test_api_smoke.py  test_app.py  test_descriptors.py  test_error_envelope.py  test_file_uploads.py  test_fingerprints.py  test_molecular_structure.py  test_routes_ok.py  test_static_assets.py
tests/fixtures/: inventory.py
tests/formatters/: run.js
tests/visual/: a11y_audit.py  e2e_flows.py  take_baseline.py
utils/: __init__.py  config.py  errors.py  file_parsers.py  friendly_errors.py  logging.py  rdkit_helpers.py
